RESOLVED FIXED275856
[WGSL] const_assert should not generate code
https://bugs.webkit.org/show_bug.cgi?id=275856
Summary [WGSL] const_assert should not generate code
Tadeu Zagallo
Reported 2024-06-25 08:34:57 PDT
...
Attachments
Tadeu Zagallo
Comment 1 2024-06-25 08:35:01 PDT
Tadeu Zagallo
Comment 2 2024-06-25 09:43:36 PDT
EWS
Comment 3 2024-06-26 06:51:48 PDT
Committed 280372@main (9cf3c6cb2077): <https://commits.webkit.org/280372@main> Reviewed commits have been landed. Closing PR #30157 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.