[WGSL] const_assert should not generate code https://bugs.webkit.org/show_bug.cgi?id=275856 rdar://130088292

Reviewed by Mike Wyrzykowski.

The code generator was missing the entry for const_assert, so by default the assert
condition was being generated.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/tests/valid/fuzz-130088292.wgsl: Added.

Canonical link: https://commits.webkit.org/280372@main